
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int pthread_t ;
typedef void* mach_port_t ;
struct TYPE_3__ {int msgh_size; int msgh_id; int msgh_bits; void* msgh_remote_port; void* msgh_local_port; int member_0; } ;
typedef TYPE_1__ mach_msg_header_t ;


 int MACH_MSGH_BITS (int ,int ) ;
 int MACH_MSG_TIMEOUT_NONE ;
 int MACH_MSG_TYPE_COPY_SEND ;
 int MACH_PORT_NULL ;
 int MACH_SEND_MSG ;
 scalar_t__ go ;
 int mach_msg (TYPE_1__*,int ,int,int ,int ,int ,int ) ;
 int pthread_create (int *,int *,void*,void*) ;
 int pthread_join (int ,int *) ;
 int start ;
 int usleep (int) ;

int main() {





  pthread_t t;
  int arg = 0;
  pthread_create(&t, ((void*)0), (void*) go, (void*) &arg);

  mach_port_t v = 0xb03;

  mach_msg_header_t msg = {0};
  msg.msgh_size = sizeof(mach_msg_header_t);
  msg.msgh_local_port = v;
  msg.msgh_remote_port = v;
  msg.msgh_bits = MACH_MSGH_BITS(MACH_MSG_TYPE_COPY_SEND, MACH_MSG_TYPE_COPY_SEND);
  msg.msgh_id = 0106;

  usleep(100000);

  start = 1;

  mach_msg(&msg,
           MACH_SEND_MSG,
           msg.msgh_size,
           0,
           MACH_PORT_NULL,
           MACH_MSG_TIMEOUT_NONE,
           MACH_PORT_NULL);

  pthread_join(t, ((void*)0));

  return 0;
}
